# pcli2-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  QWEN.md  README.md
src/: app.rs  main.rs  pcli_commands.rs  ui.rs
