[package]
name = "pcli2-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
crossterm = "0.28"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
